# openfox

./: .npmignore  AGENTS.md  ARCHITECTURE.md  DOCUMENTATION.md  FUTURES.md  LICENSE  README.md  REGISTRY_CHILD_AGENT_TASKS.md  REGISTRY_EXECUTIVE_SUMMARY.md  REGISTRY_IMPLEMENTATION_PLAN.md  SYSTEM_ANALYSIS_WAKE_1398.md  WORKLOG.md  package-lock.json  package.json  pnpm-lock.yaml
docs/: OpenFox-Bounty-Architecture.md  OpenFox-Bounty-Implementation-Plan.md  OpenFox-Dashboard-Guide.md  OpenFox-Doctor-Guide.md  OpenFox-Ecosystem-Architecture.md  OpenFox-Fleet-Operator-Guide.md  OpenFox-Group-v0-Event-Types-and-CLI.md  OpenFox-IPFS-Market-v0.md  OpenFox-Index-Refactor-Plan.md  OpenFox-Integration-Examples.md  OpenFox-Intent-Based-Blockchain-Minimal-Roadmap.md  OpenFox-Intent-Implementation-Checklist.md  OpenFox-Intent-v1-Spec.md  OpenFox-MetaWorld-Completion-Status.md  OpenFox-MetaWorld-Future-State.md  OpenFox-MetaWorld-Reactor-Design.md  OpenFox-MetaWorld-v1-Product-Blueprint.md  OpenFox-Operator-Examples.md  OpenFox-Owner-Reports-Guide.md  OpenFox-Paymaster-Provider-v0.md  OpenFox-Public-Fleet-Control-Plane-Guide.md  OpenFox-SDK-Surfaces.md  OpenFox-Service-Operator-Guide.md  OpenFox-Signer-Provider-Operator-Guide.md  OpenFox-Social-Bounty-MVP.md  OpenFox-Template-Guide.md  (+5 more)
workers/: Cargo.toml
workers/openfox-proof-verifier/: Cargo.toml
workers/openfox-proof-verifier/src/: main.rs
workers/openfox-worker-contracts/: Cargo.toml
workers/openfox-worker-contracts/src/: lib.rs
workers/openfox-zktls-bundler/: Cargo.toml
workers/openfox-zktls-bundler/src/: main.rs
(+441 files in other folders)
