[workspace]
members = [
  "openfox-worker-contracts",
  "openfox-zktls-bundler",
  "openfox-proof-verifier",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["OpenFox"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
